overflow issue

--- a/style.css
+++ b/style.css
@@ -37,12 +37,9 @@ body {
   font-family: 'Inter', sans-serif;
   color: var(--black);
   background-color: var(--white);
-  overflow-x: hidden;
-  max-width: 100vw;
 }
 
 html {
-  /* overflow-x: hidden; */
   max-width: 100vw;
 }
 
@@ -141,6 +138,7 @@ table {
 
 .top-content {
   position: relative;
+  overflow-x: clip;
 }
 
 .ghost-section {
